@@ -96,6 +96,7 @@ pocc_options_malloc ()
   ret->pluto_external_candl = 0;
   ret->pluto_rar_cf = 0;
   ret->pluto_tiling_in_scatt = 0;
+  ret->pluto_bound_coefficients = 0;
 
   // Cloog options.
   ret->cloog_f = POCC_CLOOG_UNDEF;
