@@ -76,7 +76,8 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "pluto-ft", 0, "\tPLuTo: ft [off]" },
   { '\0', "pluto-lt", 0, "\tPLuTo: lt [off]" },
   { '\0', "pluto-ext-candl", 0, "PLuTo: Read dependences from SCoP [off]" },
-  { '\0', "pluto-tile-scat", 0, "PLuTo: Perform tiling inside scatterings [off]\n" },
+  { '\0', "pluto-tile-scat", 0, "PLuTo: Perform tiling inside scatterings [off]" },
+  { '\0', "pluto-bounds", 1, "PLuTo: Transformation coefficients bounds [+inf]\n" },
   { 'n', "no-codegen", 0, "\tDo not generate code [off]" },
   { '\0', "cloog-cloogf", 1, "CLooG: first level to scan [1]" },
   { '\0', "cloog-cloogl", 1, "CLooG: last level to scan [-1]" },
@@ -407,6 +408,12 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
   if (opt_tab[POCC_OPT_PLUTO_TILING_IN_SCATT])
     {
       options->pluto_tiling_in_scatt = 1;
+      options->pluto = 1;
+    }
+  if (opt_tab[POCC_OPT_PLUTO_BOUND_COEF])
+    {
+      options->pluto_bound_coefficients =
+	atoi (opt_tab[POCC_OPT_PLUTO_BOUND_COEF]);
       options->pluto = 1;
     }
   if (opt_tab[POCC_OPT_LETSEE_BOUNDS])
