@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 
-# define POCC_NB_OPTS				62
+# define POCC_NB_OPTS				63
 
 
 # define POCC_OPT_HELP				0
@@ -86,25 +86,26 @@
 # define POCC_OPT_PLUTO_LT			41
 # define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	42
 # define POCC_OPT_PLUTO_TILING_IN_SCATT	       	43
+# define POCC_OPT_PLUTO_BOUND_COEF	       	44
 
-# define POCC_OPT_NOCODEGEN			44
-# define POCC_OPT_CLOOG_F			45
-# define POCC_OPT_CLOOG_L			46
-# define POCC_OPT_PRAGMATIZER			47
-# define POCC_OPT_VECTORIZER			48
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	49
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  50
-# define POCC_OPT_VECT_SINK_ALL_LOOPS		51
-# define POCC_OPT_STORCOMPACT			52
-# define POCC_OPT_AC_KEEP_OUTERPAR		53
-# define POCC_OPT_AC_KEEP_VECTORIZED		54
-# define POCC_OPT_CODEGEN_TIMERCODE		55
-# define POCC_OPT_CODEGEN_TIMER_ASM		56
-# define POCC_OPT_CODEGEN_TIMER_PAPI		57
-# define POCC_OPT_COMPILE      			58
-# define POCC_OPT_COMPILE_CMD          		59
-# define POCC_OPT_RUN_CMD_ARGS          	60
-# define POCC_OPT_PROGRAM_TIMEOUT        	61
+# define POCC_OPT_NOCODEGEN			45
+# define POCC_OPT_CLOOG_F			46
+# define POCC_OPT_CLOOG_L			47
+# define POCC_OPT_PRAGMATIZER			48
+# define POCC_OPT_VECTORIZER			49
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	50
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  51
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		52
+# define POCC_OPT_STORCOMPACT			53
+# define POCC_OPT_AC_KEEP_OUTERPAR		54
+# define POCC_OPT_AC_KEEP_VECTORIZED		55
+# define POCC_OPT_CODEGEN_TIMERCODE		56
+# define POCC_OPT_CODEGEN_TIMER_ASM		57
+# define POCC_OPT_CODEGEN_TIMER_PAPI		58
+# define POCC_OPT_COMPILE      			59
+# define POCC_OPT_COMPILE_CMD          		60
+# define POCC_OPT_RUN_CMD_ARGS          	61
+# define POCC_OPT_PROGRAM_TIMEOUT        	62
 
 
 BEGIN_C_DECLS
